--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div id="gallery-title"></div>
   <div class="gallery-div" id="">
     <h1 class="gallery-head" id="gallery1">
-      Book Case
+      Book Gallery
     </h1>
   </div>
 
