--- a/index.html
+++ b/index.html
@@ -111,7 +111,21 @@
 
         <!--Start from here-->
 
-
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/714FbKtXS+L.jpg"
+              alt="The Power of Now" />
+            <div class="card-body">
+              <h5 class="card-title">The Power of Now</h5>
+              <p class="card-text">The Power of Now: A Guide to Spiritual Enlightenment is a book by Eckhart Tolle. It
+                presents itself as a discussion about how people interact with themselves and others. The concept of
+                self reflection and presence in the moment are presented along with simple exercises for the achievement
+                of its principles</p>
+              <a href="https://github.com/aaakashkumar" class="btn btn-outline-danger btn-sm">Contributed by -
+                Akash</a>
+            </div>
+          </div>
+        </div>
 
 
 
