--- a/index.html
+++ b/index.html
@@ -127,6 +127,19 @@
           </div>
         </div>
 
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/51RQ5km2gkL._AC_SY780_.jpg"
+              alt="The Secret" />
+            <div class="card-body">
+              <h5 class="card-title">The Secret</h5>
+              <p class="card-text">The Secret is a self-help book by Rhonda Byrne that explains how the law of attraction, which states that positive energy attracts positive things into your life, governs your thinking and actions, and how you can use the power of positive thinking to achieve anything you can imagine.</p>
+              <a href="https://github.com/soham-pagi" class="btn btn-outline-danger btn-sm">Contributed by -
+                Soham Pagi</a>
+            </div>
+          </div>
+        </div>
+
 
 
 
