added a new card and changed text color of titles

--- a/index.html
+++ b/index.html
@@ -139,6 +139,19 @@
             </div>
           </div>
         </div>
+        
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/41yT41SG23L._SX294_BO1,204,203,200_.jpg"
+              alt="The Da Vinci Code" />
+            <div class="card-body">
+              <h5 class="card-title">The Da Vinci Code</h5>
+              <p class="card-text">The Da Vinci Code is a 2003 mystery thriller novel by Dan Brown.The Da Vinci Code follows symbologist Robert Langdon and cryptologist Sophie Neveu after a murder in the Louvre Museum in Paris causes them to become involved in a battle between the Priory of Sion and Opus Dei over the possibility of Jesus Christ and Mary Magdalene having had a child together.</p>
+              <a href="https://github.com/shwet0710" class="btn btn-outline-danger btn-sm">Contributed by -
+                Shwet Shukla</a>
+            </div>
+          </div>
+        </div>
 
 
 
