--- a/index.html
+++ b/index.html
@@ -140,7 +140,21 @@
           </div>
         </div>
 
-
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://bc-img.s3.ap-south-1.amazonaws.com/images/cover/762/9789389152234.jpg" alt=""/>
+            <div class="card-body">
+              <h5 class="card-title">NO LIMITS</h5>
+              <p class="card-text">NO LIMITS is great self-help book written by a 
+                renowned entrepreneur Mukesh Bansal. It takes us through the journey of great living through the art and science of high performance.</p>
+              <a
+                href="https://github.com/Devrajsinh03"
+                class="btn btn-outline-danger btn-sm"
+                >Contributed by - Devrajsinh03</a
+              >
+            </div>
+          </div>
+        </div>
 
 
 
