--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </li>
       </ul>
     </div>
-  </nav><!-- Header Section -->
+  </nav><!--Header Section-->
 
   <div class="jumbotron text-center " id="header">
 
@@ -109,7 +109,7 @@
           </div>
         </div>
 
-        <!--Start from here-->
+        <!-- Start from here -->
 
         <div class="col-lg-4 mb-4">
           <div class="card">
@@ -125,40 +125,58 @@
                 Akash</a>
             </div>
           </div>
-        </div>
+
+          
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!--Ends here-->
+        <!-- Ends here -->
       </div>
     </div>
   </section>
   <footer>
-    <h1></h1>
-    <a href="#header" class="back-to-top"><i class="fas fa-angle-up fa-4x backToTop"></i></a>
+    <div class="back-to-top-container">
+      <a href="#header" class="back-to-top"><i class="fas fa-angle-up fa-4x backToTop"></i></a>
+    </div>
+    
+      <div class="footer-container">
+        <div class="container">
+          <div class="row">
+              <div class="footer-col">
+                  <p>Account</p>
+                  <ul>
+                      <li><a href="#">Customer</a></li>
+                      <li><a href="#">Seller</a></li>
+                      <li><a href="#">Agent</a></li>
+                  </ul>
+              </div>
+              <div class="footer-col">
+                  <p>get help</p>
+                  <ul>
+                      <li><a href="#">shipping</a></li>
+                      <li><a href="#">returns</a></li>
+                      <li><a href="#">order status</a></li>
+                      <li><a href="#">payment options</a></li>
+                  </ul>
+              </div>
+              <div class="footer-col">
+                  <p>follow us</p>
+                  <div class="social-links">
+                      <a href="#"><i class="fab fa-facebook-f"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </div>
+              </div>
+          </div>
+        </div>
+      </div>    
+      <div class="copyright-container">
+        <p class="copyright">BookCase. Copyright &copy; 2022-present.</p>
+        <P class="contributed-by">Contributed by - <a href="https://github.com/Saishrey" target="_blank">Shreyas Naik</a></P>
+      </div>   
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
