--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         <div class="col-lg-4 mb-4">
           <div class="card">
-            <img class="card-img-top" src="https://bc-img.s3.ap-south-1.amazonaws.com/images/cover/762/9789389152234.jpg" alt=""/>
+            <img class="card-img-top" src="https://bc-img.s3.ap-south-1.amazonaws.com/images/cover/762/9789389152234.jpg" alt="NO LIMITS"/>
             <div class="card-body">
               <h5 class="card-title">NO LIMITS</h5>
               <p class="card-text">NO LIMITS is great self-help book written by a 
