--- a/index.html
+++ b/index.html
@@ -110,6 +110,21 @@
         </div>
 
         <!--Start from here-->
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/310MEoDkSTL.jpg"/>
+            <div class="card-body">
+              <h5 class="card-title">Unlocked: The Power of You - “A must-read for anyone who wants to unleash their full potential.”</h5>
+              <p class="card-text">“Unlocked: The Power of You is a must read for any professional to truly unleash hidden potential.
+                 Written in clear, easily understandable language, and extremely important to provide hope for a better future through all of our individual strength.”.</p>
+              <a
+                href="https://github.com/viveksondhiya"
+                class="btn btn-outline-danger btn-sm"
+                >Contributed by - Vivek Sondhiya</a>
+            </div>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 mb-4">
           <div class="card">
