added a book and resolved overlapping bug

--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
       </h2>
     </h2>
 
-    <div>
-      <p class="lead">We all love Books, don't we? Go ahead and share your favourite with us!</p>
-      <!-- <a href="#gallery-title"><i class="fas fa-chevron-down fa-6x gallery-icon" id="icon1"></i></a> -->
-    </div>
+   
 
   </div>
   </div><!-- Gallery  -->
@@ -62,7 +59,11 @@
       Book Gallery
     </h1>
   </div>
-
+  
+ <div>
+      <p class="lead">We all love Books, don't we? Go ahead and share your favourite with us!</p>
+      <!-- <a href="#gallery-title"><i class="fas fa-chevron-down fa-6x gallery-icon" id="icon1"></i></a> -->
+    </div>
 
   <section id="gallery">
     <div class="container">
@@ -79,6 +80,20 @@
                 financial intelligence.</p>
               <a href="https://github.com/vishaaal/" class="btn btn-outline-danger btn-sm">Contributed by -
                 vishaaal</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img alt="RDPD" class="card-img-top" src="https://m.media-amazon.com/images/I/51mN3bY0JjL._SX332_BO1,204,203,200_.jpg">
+            <div class="card-body">
+              <h5 class="card-title">The Subtle Art of Not Giving a F*ck</h5>
+              <p class="card-text">The Subtle Art of Not Giving a F**k is his antidote to the coddling,
+                 let’s-all-feel-good mindset that has infected modern society and spoiled a generation,
+                  rewarding them with gold medals just for showing up.</p>
+              <a href="https://github.com/Ayushi-810" class="btn btn-outline-danger btn-sm">Contributed by -
+                AYUSHI SINGH</a>
             </div>
           </div>
         </div>
