--- a/index.html
+++ b/index.html
@@ -242,6 +242,19 @@
         </div>
       </div>
 
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img class="card-img-top" src="https://m.media-amazon.com/images/I/61Iz2yy2CKL.jpg"
+            alt="The Monk Who Sold His Ferrari" />
+          <div class="card-body">
+            <h5 class="card-title">The Monk Who Sold His Ferrari</h5>
+            <p class="card-text">The Monk Who Sold His Ferrari is a self-help book by Robin Sharma, a writer and motivational speaker. The book is a business fable derived from Sharma's personal experiences after leaving his career as a litigation lawyer at the age of 25.</p>
+            <a href="https://github.com/soham-pagi" class="btn btn-outline-danger btn-sm">Contributed by -
+              Noopur Dangui</a>
+          </div>
+        </div>
+      </div>
+
 
 
 
