--- a/index.html
+++ b/index.html
@@ -254,6 +254,17 @@
           </div>
         </div>
       </div>
+      
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img class="card-img-top" src="https://m.media-amazon.com/images/I/51T8OXMiB5L._SY346_.jpg" alt="IKIGAI" />
+          <div class="card-body">
+            <h5 class="card-title">IKIGAI</h5>
+            <p class="card-text">Ikigai is a Japanese concept that means your 'reason for being. ' 'Iki' in Japanese means 'life,' and 'gai' describes value or worth. Your ikigai is your life purpose or your bliss. It's what brings you joy and inspires you to get out of bed every day</p>
+            <a href="https://github.com/saransh484" class="btn btn-outline-danger btn-sm">Contributed by - saransh484</a>
+          </div>
+        </div>
+      </div>
 
 
 
