--- a/index.html
+++ b/index.html
@@ -289,6 +289,18 @@
           </div>
         </div>
       </div>
+        
+      <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img alt="DES" class="card-img-top" src="https://m.media-amazon.com/images/I/41oYp387k8L._SY264_BO1,204,203,200_QL40_FMwebp_.jpg">
+            <div class="card-body">
+              <h5 class="card-title">Do Epic Shit</h5>
+              <p class="card-text">A great book by Ankur Warikoo that teaches about life</p>
+              <a href="https://github.com/vishaaal/" class="btn btn-outline-danger btn-sm">Contributed by -
+                Abhishek</a>
+            </div>
+          </div>
+        </div>
 
 
 
