--- a/index.html
+++ b/index.html
@@ -291,7 +291,20 @@
       </div>
 
 
-
+<div class="col-lg-4 mb-4">
+  <div class="card">
+    <img class="card-img-top" src="https://m.media-amazon.com/images/I/51ObA75bY9L._SX332_BO1,204,203,200_.jpg" alt="" />
+    <div class="card-body">
+      <h5 class="card-title">The Art and Science of Personality Development </h5>
+      <p class="card-text">Drawing on state-of-the-art personality and developmental research, this book presents a new and broadly integrative theory of how people come to be who they are over the life course. </p>
+      <a
+        href="https://github.com/anjali6387"
+        class="btn btn-outline-danger btn-sm"
+        >Contributed by - Anjali Gupta</a
+      >
+    </div>
+  </div>
+</div>
 
 
 
