--- a/index.html
+++ b/index.html
@@ -317,7 +317,18 @@
     </div>
   </div>
 </div>
-
+ <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.kobo.com%2Fin%2Fen%2Febook%2Fthe-autobiography-of-a-yogi-1&psig=AOvVaw3XqNfBz57LPkguXRo4KT3i&ust=1665490906975000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCKCx8aDT1foCFQAAAAAdAAAAABAE" alt="" />
+            <div class="card-body">
+              <h5 class="card-title">The Autobiography of a Yogi</h5>
+              <p class="card-text">Autobiography of a Yogi is at once a beautifully written account of an exceptional life and a profound introduction to the ancient science of Yoga and its time-honored tradition of meditation. Profoundly inspiring, it is at the same time vastly entertaining, warmly humorous and filled with extraordinary personages.
+Self-Realization Fellowship's editions, and none others, include extensive material added by the author after the first edition was published, including a final chapter on the closing years of his life.</p>
+              <a href="https://github.com/CoderDebjeet" class="btn btn-outline-danger btn-sm"
+                >Contributed by - CoderDebjeet</a>
+            </div>
+          </div>
+        </div>
 
 
 
