--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 </div>
  <div class="col-lg-4 mb-4">
           <div class="card">
-            <img class="card-img-top" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.kobo.com%2Fin%2Fen%2Febook%2Fthe-autobiography-of-a-yogi-1&psig=AOvVaw3XqNfBz57LPkguXRo4KT3i&ust=1665490906975000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCKCx8aDT1foCFQAAAAAdAAAAABAE" alt="" />
+            <img class="card-img-top" src="https://m.media-amazon.com/images/P/B00JW44IAI.01._SCLZZZZZZZ_SX500_.jpg" alt="" />
             <div class="card-body">
               <h5 class="card-title">The Autobiography of a Yogi</h5>
               <p class="card-text">Autobiography of a Yogi is at once a beautifully written account of an exceptional life and a profound introduction to the ancient science of Yoga and its time-honored tradition of meditation. Profoundly inspiring, it is at the same time vastly entertaining, warmly humorous and filled with extraordinary personages.
