--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
             <img class="card-img-top" src="https://m.media-amazon.com/images/P/B00JW44IAI.01._SCLZZZZZZZ_SX500_.jpg" alt="" />
             <div class="card-body">
               <h5 class="card-title">The Autobiography of a Yogi</h5>
-              <p class="card-text">Autobiography of a Yogi is at once a beautifully written account of an exceptional life and a profound introduction to the ancient science of Yoga and its time-honored tradition of meditation. Profoundly inspiring, it is at the same time vastly entertaining, warmly humorous and filled with extraordinary personages.
-Self-Realization Fellowship's editions, and none others, include extensive material added by the author after the first edition was published, including a final chapter on the closing years of his life.</p>
+              <p class="card-text">Autobiography of a Yogi is at once a beautifully written account of an exceptional life and
+                a profound introduction to the ancient science of Yoga and its time-honored tradition of meditation. Profoundly inspiring, it is at the same time vastly entertaining, warmly humorous and filled with extraordinary personages.</p>
               <a href="https://github.com/CoderDebjeet" class="btn btn-outline-danger btn-sm"
                 >Contributed by - CoderDebjeet</a>
             </div>
