--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
        
         <div class="col-lg-4 mb-4">
          <div class="card">
-           <img class="card-img-top" src="https://m.media-amazon.com/images/P/0345472322.01._SCLZZZZZZZ_SX500_.jpg"/> 
+           <img class="card-img-top" src="https://m.media-amazon.com/images/P/0345472322.01._SCLZZZZZZZ_SX500_.jpg" alt=""/> 
            <div class="card-body">
               <h5 class="card-title">Mindset: The New Psychology of Success</h5>
               <p class="card-text">After decades of research, world-renowned Stanford University psychologist Carol S. Dweck, Ph.D., discovered a simple but groundbreaking idea: the power of mindset. 
