--- a/index.html
+++ b/index.html
@@ -345,7 +345,20 @@
           </div>
         </div>
 
-
+<div class="col-lg-4 mb-4">
+  <div class="card">
+    <img class="card-img-top" src="https://i.postimg.cc/hGBQGp61/Immortals-Of-Meluha.jpg" alt="" />
+    <div class="card-body">
+      <h5 class="card-title">The Immortals of Meluha</h5>
+      <p class="card-text">The story is set in the land of Meluha and starts with the arrival of the Shiva. The Meluhans believe that Shiva is their fabled saviour Neelkanth. Shiva decides to help the Meluhans in their war against the Chandravanshis, who had joined forces with a cursed Nagas; however, during his journey and the fight that ensues, Shiva learns how his choices actually reflect who he aspires to be and how they lead to dire consequences.</p>
+      <a
+        href="https://github.com/VedVaghela"
+        class="btn btn-outline-danger btn-sm"
+        >Contributed by - VedVaghela</a
+      >
+    </div>
+  </div>
+</div>
 
         <!--Ends here-->
       </div>
