added The Rudest Book ever

--- a/index.html
+++ b/index.html
@@ -345,6 +345,20 @@
           </div>
         </div>
 
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/81U3+6n3s1L.jpg" alt="" />
+            <div class="card-body">
+              <h5 class="card-title">The Rudest Book Ever</h5>
+              <p class="card-text">Laying out clear principles, YouTube megastar Gangwar shows you how to deal with the shit that has happened to you, is happening to you and will happen to you. A refreshing, easy-to-read, and relatable guide, The Rudest Book Ever will make you rethink everything you? ve been taught.</p>
+              <a
+                href="https://github.com/AdityaMore7000"
+                class="btn btn-outline-danger btn-sm"
+                >Contributed by - AdityaMore7000</a
+              >
+            </div>
+          </div>
+        </div>
 
 
         <!--Ends here-->
