--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
   <link rel="shortcut icon" href="icons/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" />
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" />
   <link rel="stylesheet" href="index.css" />
+  <!-- adding style sheet -->
+  <link rel="stylesheet" href="feed.css">
+
+  
+
   <script defer src="./js/typewriterEffect.js"></script>
   <title>BookCase</title>
 </head>
@@ -300,6 +305,36 @@
       </div>
     </div>
   </section>
+    <!-- feedback section start form here -->
+
+    <section id="contact">
+      <h1 class="h-primary center" > <img id="imge" src="icons/feedback.jpg" alt=""> FeedBack</h1>
+      <div id="contact-box">
+          <form action="">
+              <div class="form-group">
+                  <label for="name">Name: </label>
+                  <input type="text" name="name" id="name" placeholder="Enter your name">
+              </div>
+              <div class="form-group">
+                  <label for="email">Email: </label>
+                  <input type="email" name="email" id="email" placeholder="Enter your email">
+              </div>
+              <div class="form-group">
+                  <label for="phone">Phone Number: </label>
+                  <input type="phone" name="phone" id="phone" placeholder="Enter your phone">
+              </div>
+              <div class="form-group">
+                  <label for="message">Message: </label>
+                  <textarea name="message" id="message" cols="30" rows="10"></textarea>
+              </div>
+              <div class="form-group">
+                <a href="https://github.com/Aman1143" class="btn btn-outline-danger btn-sm">Contributed by - Aman Nanda</a>
+              </div>
+          </form>
+      </div>
+  </section>
+     <!-- feedback section end here -->
+
   <footer>
     <h1></h1>
     <a href="#header" class="back-to-top"><i class="fas fa-angle-up fa-4x backToTop"></i></a>
