heart icon added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" />
   <link rel="stylesheet" href="index.css" />
   <script defer src="./js/typewriterEffect.js"></script>
@@ -80,7 +81,8 @@
                 financial intelligence.</p>
               <a href="https://github.com/vishaaal/" class="btn btn-outline-danger btn-sm">Contributed by -
                 vishaaal</a>
-            </div>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
+            </div>            
           </div>
         </div>
 
@@ -92,6 +94,7 @@
               <p class="card-text">The Lost Symbol is best-selling author Dan Brown's third thriller novel following the life of symbologist Robert Langdon as he works to solve the mystery behind the disappearance of his mentor, Peter Solomon, whose severed hand is found in the Capitol Building in Washington DC during a Smithsonian fundraiser.</p>
               <a href="https://github.com/sibayanmisra2002" class="btn btn-outline-danger btn-sm"
                 >Contributed by - sibayanmisra2002</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -106,6 +109,7 @@
                   rewarding them with gold medals just for showing up.</p>
               <a href="https://github.com/Ayushi-810" class="btn btn-outline-danger btn-sm">Contributed by -
                 AYUSHI SINGH</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -119,6 +123,7 @@
                 in 1988. Originally written in Portuguese, it became a widely translated international bestseller.</p>
               <a href="https://github.com/vishaaal/" class="btn btn-outline-danger btn-sm">Contributed by -
                 vishaaal</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -132,6 +137,7 @@
                 how small changes can change your life.</p>
               <a href="https://github.com/hackbysarthak03" class="btn btn-outline-danger btn-sm">Contributed by -
                 Sarthak Vishwakarma</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -144,6 +150,7 @@
               <p class="card-text">E. M. Forster’s A Passage to India, published in 1924, tells a story of the power of colonialism, the tension between spirituality and morality, and the inescapability of evil. Forster wrote this novel after traveling to India in 1912 and volunteering in Egypt during World War I.</p>
               <a href="https://github.com/sibayanmisra2002" class="btn btn-outline-danger btn-sm">Contributed by -
                 sibayanmisra2002</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -160,6 +167,7 @@
                 href="https://github.com/viveksondhiya"
                 class="btn btn-outline-danger btn-sm"
                 >Contributed by - Vivek Sondhiya</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -177,6 +185,7 @@
                 of its principles</p>
               <a href="https://github.com/aaakashkumar" class="btn btn-outline-danger btn-sm">Contributed by -
                 Akash</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -190,6 +199,7 @@
               <p class="card-text">The Secret is a self-help book by Rhonda Byrne that explains how the law of attraction, which states that positive energy attracts positive things into your life, governs your thinking and actions, and how you can use the power of positive thinking to achieve anything you can imagine.</p>
               <a href="https://github.com/soham-pagi" class="btn btn-outline-danger btn-sm">Contributed by -
                 Soham Pagi</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -203,6 +213,7 @@
               <p class="card-text">The Da Vinci Code is a 2003 mystery thriller novel by Dan Brown.The Da Vinci Code follows symbologist Robert Langdon and cryptologist Sophie Neveu after a murder in the Louvre Museum in Paris causes them to become involved in a battle between the Priory of Sion and Opus Dei over the possibility of Jesus Christ and Mary Magdalene having had a child together.</p>
               <a href="https://github.com/shwet0710" class="btn btn-outline-danger btn-sm">Contributed by -
                 Shwet Shukla</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -218,6 +229,7 @@
                 href="https://github.com/Devrajsinh03"
                 class="btn btn-outline-danger btn-sm"
                 >Contributed by - Devrajsinh03</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -232,6 +244,7 @@
                 href="https://github.com/jitesh1495"
                 class="btn btn-outline-danger btn-sm"
                 >Contributed by - Jitesh Kumar Verma</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -247,6 +260,7 @@
                 href="https://github.com/dhrupad17"
                 class="btn btn-outline-danger btn-sm"
                 >Contributed by - dhrupad17 </a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
            </div>
         </div>
        </div>
@@ -262,6 +276,7 @@
               class="btn btn-outline-danger btn-sm"
               >Contributed by - Samwin Pereira</a
             >
+            <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
           </div>
         </div>
       </div>
@@ -275,6 +290,7 @@
             <p class="card-text">The Monk Who Sold His Ferrari is a self-help book by Robin Sharma, a writer and motivational speaker. The book is a business fable derived from Sharma's personal experiences after leaving his career as a litigation lawyer at the age of 25.</p>
             <a href="https://github.com/soham-pagi" class="btn btn-outline-danger btn-sm">Contributed by -
               Noopur Dangui</a>
+              <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
           </div>
         </div>
       </div>
@@ -286,6 +302,7 @@
             <h5 class="card-title">IKIGAI</h5>
             <p class="card-text">Ikigai is a Japanese concept that means your 'reason for being. ' 'Iki' in Japanese means 'life,' and 'gai' describes value or worth. Your ikigai is your life purpose or your bliss. It's what brings you joy and inspires you to get out of bed every day</p>
             <a href="https://github.com/saransh484" class="btn btn-outline-danger btn-sm">Contributed by - saransh484</a>
+            <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
           </div>
         </div>
       </div>
@@ -298,6 +315,7 @@
               <p class="card-text">A great book by Ankur Warikoo that teaches about life</p>
               <a href="https://github.com/vishaaal/" class="btn btn-outline-danger btn-sm">Contributed by -
                 Abhishek</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
@@ -314,6 +332,7 @@
         class="btn btn-outline-danger btn-sm"
         >Contributed by - Anjali Gupta</a
       >
+      <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
     </div>
   </div>
 </div>
@@ -326,6 +345,7 @@
                 a profound introduction to the ancient science of Yoga and its time-honored tradition of meditation. Profoundly inspiring, it is at the same time vastly entertaining, warmly humorous and filled with extraordinary personages.</p>
               <a href="https://github.com/CoderDebjeet" class="btn btn-outline-danger btn-sm"
                 >Contributed by - CoderDebjeet</a>
+                <span id = 'heart'><i class="fa fa-heart-o" aria-hidden="true" ></i> </span>
             </div>
           </div>
         </div>
