--- a/index.html
+++ b/index.html
@@ -461,6 +461,21 @@
             </div>
           </div>
         </div>
+        
+        <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img class="card-img-top" src="https://m.media-amazon.com/images/I/41-0lBgMGvL.jpg" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">The Art of War: Spirituality for Conflict</h5>
+            <p class="card-text">Discover the Spirituality Incisive Strategies for Peacefully Resolving Conflict in this Masterpiece of Military Strategy. Written 2,500 years ago by Chinese general Sun Tzu, The Art of War is a poetic and potent treatise on military strategy still in use in war colleges around the world. Yet its principles transcend warfare and have practical applications to all the conflicts and crises we face in our lives -in our workplaces, our families, even within ourselves. Thomas Huynh guides you through Sun Tzu's masterwork, highlighting principles that encourage a perceptive and spiritual approach to conflict, enabling you to: Prevent conflicts before they arise, peacefully and quickly resolve conflicts when they do arise, act with courage, intelligence and benevolence in adversarial situations, convert potential enemies into friends, control your emotions before they control you. Now you can experience the effectiveness of Sun Tzu's teachings even if you have no previous knowledge of the Art of War. Insightful yet unobtrusive facing-page commentary explains the subtleties of the text, allowing you to unlock the power of its teachings and help prevent and resolve the conflicts in your own life.</p>
+            <a
+              href="https://github.com/gr8rithic"
+              class="btn btn-outline-danger btn-sm"
+              >Contributed by - gr8rithic</a
+            >
+          </div>
+        </div>
+      </div>
 
 
         <!--Ends here-->
