--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
               alt="The Complete Adventures of Sherlock Holmes" />
             <div class="card-body">
               <h5 class="card-title">The Complete Adventures of Sherlock Holmes</h5>
-              <p class="card-text">“There is nothing more deceptive than an obvious fact.”He has no knowledge of literature, philosophy or astronomy. But his chemistry is strong, anatomy is explicit, remembers every horror committed in detail and is completely aware of the British Law.Meet Sherlock Holmes, the ruthless and self-disciplined detective who takes up every case as an intellectual challenge. He not only solves mysteries and discovers murderers, thieves and criminals, but also identifies the social injustices and provides a new and just approach to remedy them. A collection of twelve short stories, many of which were Doyle’s favorite, the Adventures of Sherlock Holmes was well received on its publication. Listed with the Guinness World Records as the ‘most portrayed movie character’ in history, Sherlock Holmes has been adapted numerous times and continues to remain a timeless detective.</p>
+              <p class="card-text">“There is nothing more deceptive than an obvious fact.”He has no knowledge of literature, philosophy or astronomy. But his chemistry is strong, anatomy is explicit, remembers every horror committed in detail and is completely aware of the British Law.Meet Sherlock Holmes, the ruthless and self-disciplined detective who takes up every case as an intellectual challenge.</p>
               <a href="https://github.com/anwesha2240" class="btn btn-outline-danger btn-sm">Contributed by -
                 Anwesha Saha</a>
             </div>
