--- a/index.html
+++ b/index.html
@@ -489,6 +489,21 @@
         </div>
 
 
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/71k7V0QvcdL._AC_UY218_.jpg" alt="" />
+            <div class="card-body">
+              <h5 class="card-title">The Courage to be dislike</h5>
+              <p class="card-text">How to free yourself, change your life and achieve real happiness.</p>
+              <a
+                href="https://github.com/prachi0011"
+                class="btn btn-outline-danger btn-sm"
+                >Contributed by - Prachi Agrawal</a
+              >
+            </div>
+          </div>
+        </div>
+
         <!--Ends here-->
       </div>
     </div>
