added book card

--- a/index.html
+++ b/index.html
@@ -487,6 +487,25 @@
             </div>
           </div>
         </div>
+       
+       
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/51kA-Upq61L._SX325_BO1,204,203,200_.jpg" alt="" />
+            <div class="card-body">
+              <h5 class="card-title">[One Indian Girl]</h5>
+              <p class="card-text">Moving to the book then, One Indian Girl is a story of a girl called Radhika Mehta who is a hot-shot banker working in the prestigious Investment Bank, Goldman Sachs. Radhika, who once was as nerdy as one can be, is now arranged to get married to Brijesh Gulati and has just arrived for her destination wedding in Goa.
+                .</p>
+              <a
+                href="[https://github.com/Happy2411]"
+                class="btn btn-outline-danger btn-sm"
+                >Contributed by - [Happy Singh]</a
+              >
+            </div>
+          </div>
+        </div>
+
+
 
 
         <!--Ends here-->
